--- a/Call/app/src/main/res/values/strings.xml
+++ b/Call/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">Call</string>
+    <string name="app_name">전화</string>
+
+    <string name="name01">유희수</string>
+    <string name="address01">화랑북로37</string>
+    <string name="tel01">010-7732-7351</string>
+
+    <string name="name02">티지팍</string>
+    <string name="address02">걸포동</string>
+    <string name="tel02">010-7166-3763</string>
+
 </resources>
